--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -5,11 +5,11 @@
             <div id="head">
                 <h1>{{data.title}}</h1>
                 <label>Publié le {{data.created_at  | date: 'dd/MM/yyyy'}}</label>
-                <img *ngIf="data.cover !== undefined" src="{{articleCoverUrl}}" alt="article image"/>
+                <img loading="lazy" *ngIf="data.cover !== undefined" src="{{articleCoverUrl}}" alt="article image"/>
             </div>
             <div id="mainContent" [innerHTML]="data.body | safeHtml"></div>
             <div id="author">
-                <img *ngIf="userImageUrl !== undefined" class="rounded-circle d-inline " src="{{userImageUrl}}" alt="">
+                <img loading="lazy" *ngIf="userImageUrl !== undefined" class="rounded-circle d-inline " src="{{userImageUrl}}" alt="">
                 <p class="d-inline p-2">Par {{data.author.firstname}} {{data.author.lastname}}, Rédacteur onlyweebs.com</p>
             </div>
         </div>
@@ -18,7 +18,7 @@
             <div class="articleBox rounded">
                 <div class="row ">
                     <div class="col-md-6">
-                        <img class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
+                        <img loading="lazy" class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
                     </div>
                     <div class="col-md-6">
                         <p>NieR Replicant ver.1.22474487139, pêche et jardinage : notre guide complet</p>
@@ -28,7 +28,7 @@
             <div class="articleBox rounded">
                 <div class="row">
                     <div class="col-md-6">
-                        <img class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
+                        <img loading="lazy" class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
                     </div>
                     <div class="col-md-6">
                         <p>NieR Replicant ver.1.22474487139, pêche et jardinage : notre guide complet</p>
@@ -38,7 +38,7 @@
             <div class="articleBox rounded">
                 <div class="row">
                     <div class="col-md-6">
-                        <img class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
+                        <img loading="lazy" class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
                     </div>
                     <div class="col-md-6">
                         <p>NieR Replicant ver.1.22474487139, pêche et jardinage : notre guide complet</p>
@@ -48,7 +48,7 @@
             <div class="articleBox rounded">
                 <div class="row">
                     <div class="col-md-6">
-                        <img class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
+                        <img loading="lazy" class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
                     </div>
                     <div class="col-md-6">
                         <p>NieR Replicant ver.1.22474487139, pêche et jardinage : notre guide complet</p>
@@ -58,7 +58,7 @@
             <div class="articleBox rounded">
                 <div class="row">
                     <div class="col-md-6">
-                        <img class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
+                        <img loading="lazy" class="rounded-left" src="https://www.actugaming.net/wp-content/uploads/2021/02/NieR-Replicant-ver-1-22474487139_2021_02-24-21_002.jpg" alt="">
                     </div>
                     <div class="col-md-6">
                         <p>NieR Replicant ver.1.22474487139, pêche et jardinage : notre guide complet</p>
