--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -2,10 +2,10 @@
     <div class="container fill">
         <div class="row testA">
             <div class="col-lg-2 col-md-1 col-sm-1 testB">
-                    <img class="logo"
+                    <img loading="lazy" class="logo"
                          src="assets/logo_OW_face.png"
                          alt="alt"/>
-                    <img class="text"
+                    <img loading="lazy" class="text"
                          src="assets/OW-LOGO-letters.png"
                          alt="alt"/>
             </div>
