--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -8,12 +8,12 @@
                 <div class="col-xl-3 col-lg-3 col-md-4 col-3 row imagesDiv" id="imgDesc">
                     <div *ngIf="listsImages[i].length<4" class="containerImg">
                         <div class="imgDiv">
-                            <img src="{{listsImages[i][0]}}" alt="" class="oneImg">
+                            <img loading="lazy" src="{{listsImages[i][0]}}" alt="" class="oneImg">
                         </div>
                     </div>
                     <div *ngIf="listsImages[i].length==4" class=" containerImg">
                         <div *ngFor="let listImage of listsImages[i]; let j=index" class="imgDiv">
-                            <img src="{{listImage}}" alt="4 images together" class="fourImages">
+                            <img loading="lazy" src="{{listImage}}" alt="4 images together" class="fourImages">
                         </div>
                     </div>
                 </div>
