--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark ">
     <a class="navbar-brand" routerLink="home">
-        <img id="homeImage"
+        <img loading="lazy" id="homeImage"
              src="assets/ow-smol-text.webp"
              alt="alt"/>
     </a>
@@ -28,7 +28,7 @@
             <div class="input-group mb-3" id="searchBlock">
 
                 <ng-template #rt let-r="result" let-t="term">
-                    <img [src]="r.imgUrl" class="mr-1" style="width: 16px">
+                    <img loading="lazy" [src]="r.imgUrl" class="mr-1" style="width: 16px">
                     <ngb-highlight [result]="r.title" [term]="t"></ngb-highlight>
                 </ng-template>
                 <input id="typeahead-template" type="text" class="form-control" [(ngModel)]="searchInputValue"
