--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -75,12 +75,11 @@
             <h1>Comments</h1>
             <div *ngFor="let comment of comments ; let index = index" class="mt-4 text-justify float-left comment">
 
-                <img src="data:image/webp;base64,{{comment.usersEntity.image.content}}" alt="profile image"
+                <img src="data:image/webp;base64,{{comment.user.image.content}}" alt="profile image"
                      class="rounded-circle" width="80" height="80">
-                <h4> {{comment.usersEntity.firstname}} "{{comment.usersEntity.username}}
-                    " {{comment.usersEntity.lastname}} </h4>
+                <h4>{{comment.user.username}}</h4>
                 <span>-{{comment.date |  date:'dd/MM/yyyy'}}</span> <br>
-                <p>{{comment.comment}}</p>
+                <p>{{comment.body}}</p>
             </div>
         </div>
 
