--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,17 +1,47 @@
 <body id="body">
-<div *ngIf="data !== undefined" class="container">
+<div *ngIf="article !== undefined" class="container">
     <div class="row">
         <div class="col-md-8">
             <div id="head">
-                <h1>{{data.title}}</h1>
-                <label>Publié le {{data.created_at  | date: 'dd/MM/yyyy'}}</label>
-                <img *ngIf="data.cover !== undefined" src="{{articleCoverUrl}}" alt="article image"/>
+                <h1>{{article.title}}</h1>
+                <label>Publié le {{article.created_at  | date: 'dd/MM/yyyy'}}</label>
+                <img *ngIf="article.cover !== undefined" src="{{articleCoverUrl}}" alt="article image"/>
             </div>
-            <div id="mainContent" [innerHTML]="data.body | safeHtml"></div>
+            <div id="mainContent" [innerHTML]="article.body | safeHtml"></div>
             <div id="author">
                 <img *ngIf="userImageUrl !== undefined" class="rounded-circle d-inline " src="{{userImageUrl}}" alt="">
-                <p class="d-inline p-2">Par {{data.author.firstname}} {{data.author.lastname}}, Rédacteur onlyweebs.com</p>
+                <p class="d-inline p-2">Par {{article.author.firstname}} {{article.author.lastname}}, Rédacteur onlyweebs.com</p>
             </div>
+            <div class="row d-flex justify-content-center">
+                <div [ngClass]="isConnected ? 'col-sm-6 col-md-6 col-6 pb-6' : 'col-sm-8 col-md-8 col-8 pb-8'">
+                    <h1>Comments</h1>
+                    <div *ngFor="let comment of comments ; let index = index" class="mt-4 text-justify float-left comment">
+
+                        <img src="data:image/webp;base64,{{comment.user.image.content}}" alt="profile image"
+                             class="rounded-circle" width="80" height="80">
+                        <h4>{{comment.user.username}}</h4>
+                        <span>-{{comment.date |  date:'dd/MM/yyyy'}}</span> <br>
+                        <p>{{comment.body}}</p>
+                    </div>
+                </div>
+
+                <div *ngIf="isConnected" class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4">
+                    <form id="align-form" (ngSubmit)="sendArticleComment()" [formGroup]="commentForm">
+                        <div class="form-group">
+                            <h1>Leave a comment</h1> <label for="message">Message</label> <textarea name="msg" id="message"
+                                                                                                    cols="30" rows="5"
+                                                                                                    class="form-control"
+                                                                                                    formControlName="comment"
+                                                                                                    style="background-color: black;"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">{{userHasComment ? 'Edit Comment' : 'Post Comment' }}</button>
+                            <button *ngIf="userHasComment" id="delete-button" type="button" class="btn btn-danger" (click)="deleteArticleComment()">Delete your comment</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
         </div>
         <div class="col-md-4">
             <h2>A lire aussi</h2>
