--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,4 @@
 <footer id="footer" class="page-footer font-small unique-color-dark">
-
     <div style="background-color: #2e3032;">
         <div class="container">
             <div class="row py-4 d-flex align-items-center">
@@ -17,7 +16,8 @@
                             <i class="fa fa-twitter"></i>
                         </span>
                     </a>
-                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA" aria-label="Youtube">
+                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA"
+                       aria-label="Youtube">
                         <span style="font-size: 3em; color: red;">
                             <i class="fa fa-youtube"></i>
                         </span>
@@ -36,7 +36,6 @@
             </div>
         </div>
     </div>
-
     <div class="container text-center text-md-left mt-5">
         <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
@@ -45,7 +44,6 @@
                 <p>Welcome to OnlyWeebs, the world's most active online anime and manga community and database. <a
                     [routerLink]="['#!']">About us</a></p>
             </div>
-
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                 <h5 class="text-uppercase font-weight-bold">Be proactive</h5>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
@@ -54,7 +52,6 @@
                 <p><a [routerLink]="['#!']">Send a Ticket to admins</a></p>
                 <p><a [routerLink]="['#!']">Report a bug</a></p>
             </div>
-
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                 <h5 class="text-uppercase font-weight-bold">Useful links</h5>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
@@ -63,7 +60,6 @@
                 <p><a [routerLink]="['#']">Weeb Shop</a></p>
                 <p><a [routerLink]="['/help']">Help</a></p>
             </div>
-
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                 <h5 class="text-uppercase font-weight-bold">Contact Us !</h5>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
@@ -74,9 +70,7 @@
             </div>
         </div>
     </div>
-
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
         <a [routerLink]="['/home']"> OnlyWeebs.com</a>
     </div>
-
 </footer>
