--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -69,23 +69,19 @@
             </div>
         </div>
     </div>
-
     <div class="row d-flex justify-content-center">
         <div [ngClass]="isConnected ? 'col-sm-6 col-md-6 col-6 pb-6' : 'col-sm-8 col-md-8 col-8 pb-8'">
             <h1>Comments</h1>
             <div *ngFor="let comment of comments ; let index = index" class="mt-4 text-justify float-left comment">
-
                 <img loading="lazy" src="data:image/webp;base64,{{comment.usersEntity.image.content}}" alt="profile image"
                      class="rounded-circle" width="80" height="80">
-                <h4> {{comment.usersEntity.firstname}} "{{comment.usersEntity.username}}
-                    " {{comment.usersEntity.lastname}} </h4>
+                <h4>{{comment.user.username}}</h4>
                 <span>-{{comment.date |  date:'dd/MM/yyyy'}}</span> <br>
-                <p>{{comment.comment}}</p>
+                <p>{{comment.body}}</p>
             </div>
         </div>
-
         <div *ngIf="isConnected" class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4">
-            <form id="algin-form" (ngSubmit)="sendComment()" [formGroup]="commentForm">
+            <form id="align-form" (ngSubmit)="sendAnimeComment()" [formGroup]="commentForm">
                 <div class="form-group">
                     <h1>Leave a comment</h1> <label for="message">Message</label> <textarea name="msg" id="message"
                                                                                             cols="30" rows="5"
@@ -95,7 +91,7 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">{{userHasComment ? 'Edit Comment' : 'Post Comment' }}</button>
-                    <button *ngIf="userHasComment" id="delete-button" type="button" class="btn btn-danger" (click)="deleteComment()">Delete your comment</button>
+                    <button *ngIf="userHasComment" id="delete-button" type="button" class="btn btn-danger" (click)="deleteAnimeComment()">Delete your comment</button>
                 </div>
             </form>
         </div>
