--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -3,14 +3,14 @@
     <div class="row">
         <div class="col-md-8">
             <div id="head">
-                <h1>{{data.title}}</h1>
-                <label>Publié le {{data.created_at  | date: 'dd/MM/yyyy'}}</label>
-                <img loading="lazy" *ngIf="data.cover !== undefined" src="{{articleCoverUrl}}" alt="article image"/>
+                <h1>{{article.title}}</h1>
+                <label>Publié le {{article.created_at  | date: 'dd/MM/yyyy'}}</label>
+                <img loading="lazy" *ngIf="article.cover !== undefined" src="{{articleCoverUrl}}" alt="article image"/>
             </div>
             <div id="mainContent" [innerHTML]="article.body | safeHtml"></div>
             <div id="author">
                 <img loading="lazy" *ngIf="userImageUrl !== undefined" class="rounded-circle d-inline " src="{{userImageUrl}}" alt="">
-                <p class="d-inline p-2">Par {{data.author.firstname}} {{data.author.lastname}}, Rédacteur onlyweebs.com</p>
+                <p class="d-inline p-2">Par {{article.author.firstname}} {{article.author.lastname}}, Rédacteur onlyweebs.com</p>
             </div>
             <div class="row d-flex justify-content-center">
                 <div [ngClass]="isConnected ? 'col-sm-6 col-md-6 col-6 pb-6' : 'col-sm-8 col-md-8 col-8 pb-8'">
