--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,7 +70,10 @@
     <div class=" text-light text-center">
         <h3> TOP DES SORTIES </h3>
     </div>
-    <div>
+    <div *ngIf="anime!== undefined">
+        <img loading="lazy" src="{{anime.imgUrl}}" class="card-img-top" alt="one piece png">
+    </div>
+   <!-- <div>
         <div class="container anime" *ngIf="animes!== undefined">
             <div class="row">
                 <div *ngFor="let anime of animes" class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-4">
@@ -86,7 +89,7 @@
 
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="container">
         <div class=" text-light text-center">
             <h3> ACTUALITÉ </h3>
