lets see if this works

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -71,7 +71,8 @@
         <h3> TOP DES SORTIES </h3>
     </div>
     <div *ngIf="anime!== undefined">
-        <img loading="lazy" src="{{anime.imgUrl}}" class="card-img-top" alt="one piece png">
+<!--        <img loading="lazy" src="{{anime.imgUrl}}" class="card-img-top" alt="one piece png">-->
+        {{anime}}
     </div>
    <!-- <div>
         <div class="container anime" *ngIf="animes!== undefined">
