--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
-<div id="mainContainer" class="container text-light">
+<div *ngIf="loaded" id="mainContainer" class="container text-light">
     <div class=" text-light text-center">
         <h3> LES LISTES DU MOMENTS </h3>
     </div>
     <div class="row" *ngIf="lists!== undefined">
-        <div class="col-5" *ngIf="listsLoaded">
+        <div class="col-5">
             <input hidden type="radio" name="carousel-control" id="button_1" checked/>
             <input hidden type="radio" name="carousel-control" id="button_2"/>
             <input hidden type="radio" name="carousel-control" id="button_3"/>
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-7" *ngIf="listsLoaded">
+        <div class="col-7" *ngIf="loaded">
             <div id="navigation" *ngFor="let list of lists; let index = index;">
                 <a routerLink="/lists/{{list.id}}">
                     <label class="label_{{index+1}}"></label>
@@ -70,7 +70,7 @@
     <div class=" text-light text-center">
         <h3> TOP DES SORTIES </h3>
     </div>
-    <div *ngIf="animesLoaded">
+    <div>
         <div class="container anime" *ngIf="animes!== undefined">
             <div class="row">
                 <div *ngFor="let anime of animes" class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-4">
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="container" *ngIf="articles!== undefined">
-        <div class="row" *ngIf="articlesLoaded">
+        <div class="row">
             <div class="row" *ngIf="imagesUrls !== undefined">
                 <div class="col-12 pb-5">
                     <section class="row">
