removed the ability to delete default list.

--- a/src/app/onelist/onelist.component.html
+++ b/src/app/onelist/onelist.component.html
@@ -44,7 +44,7 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <button (click)="deleteList()">
+                    <button *ngIf="!isDefault" (click)="deleteList()">
                         <span
                             ><i class="fa fa-trash"></i> delete this list</span
                         >
