--- a/src/app/errors/error.component.sass
+++ b/src/app/errors/error.component.sass
@@ -1,10 +1,13 @@
 .error-page
-    background: black
+    background-image: url("https://media1.tenor.com/images/1ac375ffe6f2e99ac36eb1b42a7b9707/tenor.gif?itemid=13593873")
+    background-repeat: no-repeat
+    background-size: cover
     display: flex
     align-items: center
     justify-content: center
     text-align: center
     font-family: Arial,"Helvetica Neue",Helvetica,sans-serif
+    height: 80vh
 
 #container
     margin-top: 3vh
@@ -32,7 +35,7 @@
             animation: animateTextBackground 10s ease-in-out infinite
 
         + p
-            color: #d6d6d6
+            color: black
             font-size: 8vh
             font-weight: bold
             line-height: 10vh
