--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,29 @@
+.sideImage {
+    z-index: 1;
+    top: 0;
+    left: 0;
+    margin-top: 3vh;
+}
+
+#bigdiv {
+}
+
+#left {
+    float: left;
+    width: 14vw;
+    margin-left: 3vw;
+}
+
+#right {
+    float: right;
+    width: 14vw;
+    margin-right: 3vw;
+}
+
+#center {
+    margin: 0 auto;
+}
+
 .icon_like,
 .icon_share {
     max-width: 28px;
@@ -55,6 +81,7 @@ body {
     line-height: 1.5em;
     color: #aaa;
 }
+
 #mainContainer {
     padding-top: 2vh;
     margin-bottom: 2vh;
@@ -125,7 +152,7 @@ body {
 [class^="label_"]:focus,
 [class^="button_"]:focus,
 [class^="button_"]:focus-within,
-ici:focus-within {
+.ici:focus-within {
     background-color: ivory;
     color: gray;
 }
@@ -149,9 +176,11 @@ label {
     padding: 2px;
     border-radius: 5px;
 }
+
 .container .anime {
     max-width: 50vw;
 }
+
 .container .anime .card {
     margin-top: 2vh;
     width: 15vw;
@@ -161,6 +190,7 @@ label {
 .container .anime .card:hover {
     background-color: rgba(9, 124, 231, 0.75);
 }
+
 .container .anime .card-img-top {
     height: 30vh !important;
     object-fit: cover;
@@ -170,21 +200,26 @@ label {
 body {
     background-color: rgba(40, 43, 48, 0.75);
 }
+
 .img-fluid {
     width: 262px;
     height: 226px;
 }
+
 #image1 {
     height: 460px;
 }
+
 #articles {
     border-radius: 5px;
     width: 75vw;
     margin: auto;
 }
+
 #articleList {
     margin-top: 2vh;
 }
+
 #article {
     background-color: rgba(40, 43, 48, 0.95);
     margin-bottom: 1vh;
@@ -201,6 +236,7 @@ body {
     width: 100%;
     height: 18vh;
 }
+
 #parent {
     display: flex;
 }
@@ -212,23 +248,18 @@ body {
 .b-0 {
     bottom: 0;
 }
+
 .bg-shadow {
     background: rgba(76, 76, 76, 0);
-    background: -webkit-gradient(
-        left top,
-        left bottom,
-        color-stop(0%, rgba(179, 171, 171, 0)),
-        color-stop(49%, rgba(48, 48, 48, 0.37)),
-        color-stop(100%, rgba(19, 19, 19, 0.8))
-    );
     background: linear-gradient(
         to bottom,
         rgba(179, 171, 171, 0) 0%,
         rgba(48, 48, 48, 0.71) 49%,
         rgba(19, 19, 19, 0.8) 100%
     );
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0);
 }
+
 .top-indicator {
     right: 0;
     top: 1rem;
@@ -236,13 +267,16 @@ body {
     left: inherit;
     margin-right: 1rem;
 }
+
 .overflow {
     position: relative;
     overflow: hidden;
 }
+
 .zoom img {
     transition: all 0.2s linear;
 }
+
 .zoom:hover img {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
@@ -252,11 +286,13 @@ body {
     border-color: #868686;
     width: 50vw;
 }
+
 .articleImage {
     margin-top: 1vh;
     width: 23vw;
     height: 23vh;
 }
+
 .featurette:hover {
     background-color: #11428d;
     border-radius: 1vh;
