added the button for deletion of account

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -219,6 +219,9 @@
                     <button class="btn btn-danger" (click)="updatePassword()">
                         Update your password
                     </button>
+                    <button class="btn btn-dark" (click)="deleteAccount()">
+                        Delete your account
+                    </button>
                 </div>
             </div>
         </div>
