--- a/src/app/onelist/onelist.component.html
+++ b/src/app/onelist/onelist.component.html
@@ -1,14 +1,16 @@
-<div class="container text-center" id="list_title">
-    <h3>{{ listInfo.name }}</h3>
-    <p>{{ listInfo.description }}</p>
-</div>
-<div class="container w-75" style="font-size: large">
+<div class="container body" style="font-size: large">
+    <div class="container text-center header" id="list_title">
+        <h3>{{ listInfo.name }}</h3>
+        <p>{{ listInfo.description }}</p>
+    </div>
+    <div class="table-responsive">
     <table class="table">
         <thead class="thead-light">
             <tr class="table-dark">
-                <th>Rang</th>
-                <th>Animé</th>
-                <th>Nombre d'épisodes vus</th>
+                <th>Rank</th>
+                <th>Cover</th>
+                <th>Anime</th>
+                <th>Seen Episodes</th>
                 <th></th>
             </tr>
         </thead>
@@ -16,10 +18,11 @@
         <tbody class="table-dark">
             <tr *ngFor="let l of animesOfThisList; let i = index">
                 <td id="{{ i + 1 }}">{{ i + 1 }}</td>
+                <td><img style="max-height: 72px" src="{{l.imgUrl}}"></td>
                 <td>
                     <a [routerLink]="['/animes', l.id]">{{ l.title }}</a>
                 </td>
-                <td>0/98</td>
+                <td>X/{{l.episodes}}</td>
                 <td>
                     <button
                         *ngIf="owned"
@@ -31,9 +34,9 @@
                     </button>
                 </td>
             </tr>
-            <tr *ngIf="owned" class="">
+            <tr *ngIf="owned">
                 <td>
-                    <button (click)="open(content)">
+                    <button class="btn btn-primary" (click)="open(content)">
                         <span
                             ><i class="fa fa-plus-square">
                                 add an anime</i
@@ -43,8 +46,9 @@
                 </td>
                 <td></td>
                 <td></td>
+                <td></td>
                 <td>
-                    <button *ngIf="!isDefault" (click)="deleteList()">
+                    <button class="btn btn-danger" *ngIf="!isDefault" (click)="deleteList()">
                         <span
                             ><i class="fa fa-trash"></i> delete this list</span
                         >
@@ -53,6 +57,7 @@
             </tr>
         </tbody>
     </table>
+    </div>
 </div>
 <ng-template #content let-modal>
     <div class="modal-header">
@@ -73,7 +78,6 @@
             (ngSubmit)="onSubmit()"
         >
             <div class="form-group">
-                <label for="addAnime">Add anime to your list</label>
                 <div class="input-group">
                     <input
                         placeholder="Add an anime"
@@ -88,9 +92,9 @@
                     />
                     <button
                         id="sendNewList"
-                        class="btn btn-sm btn-success float-right"
+                        class="btn btn-sm btn-primary float-right searchBtn"
                     >
-                        Create
+                        Add
                     </button>
                 </div>
             </div>
