--- a/src/app/onelist/onelist.component.css
+++ b/src/app/onelist/onelist.component.css
@@ -1,5 +1,5 @@
 #list_title {
-    color: #aaaaaa;
+    color: white;
 }
 
 #review_title {
@@ -18,4 +18,29 @@ a {
     line-height: 0.5;
     border-radius: 0.2rem;
     margin-left: 0.25rem;
+}
+.body{
+    padding-top: 2vh;
+}
+.header{
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    margin-bottom: 2vh;
+    background-color: #2e3032;
+}
+th{
+    background-color: #11428d!important;
+    border-color: #11428d!important;
+    color: white!important;
+}
+td{
+    background-color: #2e3032;
+    border-color: white;
+}
+.searchBtn{
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+}
+.close{
+    color:red;
 }
