updated list display

--- a/src/app/anime-list/anime-list.component.html
+++ b/src/app/anime-list/anime-list.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container" style="width: 80vw;">
-    <div id="searchBlock">
+    <!--<div id="searchBlock">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search this blog">
             <div class="input-group-append">
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-    </div>
+    </div>-->
     <div class="row">
         <div
             *ngFor="let anime of animeList"
