--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,5 +1,5 @@
 <div class="col button-top">
-    <button class="btn btn-light" [routerLink]="['/list-create']">
+    <button class="btn btn-primary" [routerLink]="['/list-create']">
         Create a new list
     </button>
 </div>
